--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.14.5",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.2.1",
